--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -13,5 +13,9 @@
     "EMAIL": "Введите действующий адрес электронной почты(pat@example.com)",
     "VALID_PASSWORD": "Пароль должен состоять не менее чем из 8 знаков и содержать как минимум одну строчную букву, одну заглавную букву, один символ и цифру.",
     "CONFIRM_PASSWORD": "Пароли не совпадают"
+  },
+  "HOME_PAGE": {
+    "YOU_MAY_LIKE": "Вам может понравится",
+    "NEW_RELEASES": "Новые релизы"
   }
 }
